@@ -25,6 +25,7 @@ import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import uk.gov.hmcts.reform.pip.account.management.model.account.CreationEnum;
 import uk.gov.hmcts.reform.pip.account.management.model.account.PiUser;
 import uk.gov.hmcts.reform.pip.account.management.model.account.SystemAdminAccount;
+import uk.gov.hmcts.reform.pip.account.management.service.authorisation.AccountAuthorisationService;
 import uk.gov.hmcts.reform.pip.account.management.utils.IntegrationTestBase;
 import uk.gov.hmcts.reform.pip.model.account.Roles;
 import uk.gov.hmcts.reform.pip.model.account.UserProvenances;
@@ -63,6 +64,9 @@ class AccountTest extends IntegrationTestBase {
     @Mock
     private UserItemRequestBuilder userItemRequestBuilder;
 
+    @MockitoBean
+    private AccountAuthorisationService accountAuthorisationService;
+
     private static final String ROOT_URL = "/account";
     private static final String PI_URL = ROOT_URL + "/add/pi";
     private static final String CREATE_MEDIA_USER_URL = "/application";
@@ -71,7 +75,8 @@ class AccountTest extends IntegrationTestBase {
     private static final String CREATE_SYSTEM_ADMIN_URL = ROOT_URL + "/add/system-admin";
 
     private static final String EMAIL = "test_account_admin@hmcts.net";
-    private static final String SYSTEM_ADMIN_ISSUER_ID = "87f907d2-eb28-42cc-b6e1-ae2b03f7bba2";
+    private static final UUID SYSTEM_ADMIN_ISSUER_ID = UUID.randomUUID();
+    private static final String SYSTEM_ADMIN_ID = "87f907d2-eb28-42cc-b6e1-ae2b03f7bba2";
 
     private static final String INVALID_EMAIL = "ab";
     private static final String SURNAME = "Surname";
@@ -79,8 +84,8 @@ class AccountTest extends IntegrationTestBase {
     private static final UserProvenances PROVENANCE = UserProvenances.PI_AAD;
     private static final Roles ROLE = Roles.INTERNAL_ADMIN_CTSC;
     private static final String SUPER_ADMIN_ISSUER_ID = "87f907d2-eb28-42cc-b6e1-ae2b03f7bba3";
-    private static final String ISSUER_HEADER = "x-issuer-id";
-    private static final String ADMIN_HEADER = "x-admin-id";
+    private static final String REQUESTER_ID_HEADER = "x-requester-id";
+    private static final UUID USER_ID = UUID.randomUUID();
     private static final String GIVEN_NAME = "Given Name";
     private static final String ID = "1234";
     private static final String ADDITIONAL_ID = "4321";
@@ -152,6 +157,11 @@ class AccountTest extends IntegrationTestBase {
 
         when(graphClient.users()).thenReturn(usersRequestBuilder);
         when(usersRequestBuilder.post(any())).thenReturn(userToReturn, additionalUser);
+
+        when(accountAuthorisationService.userCanCreateAccount(any(), any())).thenReturn(true);
+        when(accountAuthorisationService.userCanGetAccountByUserId(any(), any())).thenReturn(true);
+        when(accountAuthorisationService.userCanDeleteAccount(any(), any())).thenReturn(true);
+        when(accountAuthorisationService.userCanUpdateAccount(any(), any())).thenReturn(true);
     }
 
     @Nested
@@ -262,10 +272,11 @@ class AccountTest extends IntegrationTestBase {
         @Test
         @WithMockUser(username = UNAUTHORIZED_USERNAME, authorities = {UNAUTHORIZED_ROLE})
         void testUnauthorizedCreateAccount() throws Exception {
+            when(accountAuthorisationService.userCanCreateAccount(any(), any())).thenReturn(false);
             MockHttpServletRequestBuilder request = MockMvcRequestBuilders
                 .post(PI_URL)
                 .content(OBJECT_MAPPER.writeValueAsString(List.of(validUser)))
-                .header(ISSUER_HEADER, SYSTEM_ADMIN_ISSUER_ID)
+                .header(REQUESTER_ID_HEADER, SYSTEM_ADMIN_ISSUER_ID)
                 .contentType(MediaType.APPLICATION_JSON);
 
             assertRequestResponseStatus(mockMvc, request, FORBIDDEN.value());
@@ -275,10 +286,12 @@ class AccountTest extends IntegrationTestBase {
         @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = ADD_USERS_SCRIPT)
         void testUnauthorizedCreateThirdPartyUser() throws Exception {
             PiUser thirdPartyUser = createUser(true, Roles.GENERAL_THIRD_PARTY);
+
+            when(accountAuthorisationService.userCanCreateAccount(any(), any())).thenReturn(false);
             MockHttpServletRequestBuilder request = MockMvcRequestBuilders
                 .post(PI_URL)
                 .content(OBJECT_MAPPER.writeValueAsString(List.of(thirdPartyUser)))
-                .header(ISSUER_HEADER, SUPER_ADMIN_ISSUER_ID)
+                .header(REQUESTER_ID_HEADER, SUPER_ADMIN_ISSUER_ID)
                 .contentType(MediaType.APPLICATION_JSON);
 
             assertRequestResponseStatus(mockMvc, request, FORBIDDEN.value());
@@ -293,7 +306,8 @@ class AccountTest extends IntegrationTestBase {
             String createdUserId = createTestUserValidAccount(validUser);
 
             MockHttpServletRequestBuilder getRequest = MockMvcRequestBuilders
-                .get(ROOT_URL + "/" + createdUserId);
+                .get(ROOT_URL + "/" + createdUserId)
+                .header(REQUESTER_ID_HEADER, SYSTEM_ADMIN_ISSUER_ID);
 
             MvcResult responseGetUser = mockMvc.perform(getRequest).andExpect(status().isOk()).andReturn();
 
@@ -307,14 +321,17 @@ class AccountTest extends IntegrationTestBase {
         @Test
         void testGetUserByIdNotFound() throws Exception {
             assertRequestResponseStatus(mockMvc, MockMvcRequestBuilders
-                .get(ROOT_URL + "/" + UUID.randomUUID()), NOT_FOUND.value());
+                .get(ROOT_URL + "/" + UUID.randomUUID())
+                .header(REQUESTER_ID_HEADER, SYSTEM_ADMIN_ISSUER_ID), NOT_FOUND.value());
         }
 
         @Test
         @WithMockUser(username = UNAUTHORIZED_USERNAME, authorities = {UNAUTHORIZED_ROLE})
         void testUnauthorizedGetUserById() throws Exception {
+            when(accountAuthorisationService.userCanGetAccountByUserId(any(), any())).thenReturn(false);
             assertRequestResponseStatus(mockMvc, MockMvcRequestBuilders
-                .get(ROOT_URL + "/" + UUID.randomUUID()), FORBIDDEN.value());
+                .get(ROOT_URL + "/" + UUID.randomUUID())
+                .header(REQUESTER_ID_HEADER, SYSTEM_ADMIN_ISSUER_ID), FORBIDDEN.value());
         }
     }
 
@@ -361,7 +378,7 @@ class AccountTest extends IntegrationTestBase {
         @WithMockUser(username = UNAUTHORIZED_USERNAME, authorities = {UNAUTHORIZED_ROLE})
         void testUnauthorizedGetUserByProvenanceId() throws Exception {
             MockHttpServletRequestBuilder request = MockMvcRequestBuilders
-                .get(String.format("%s/%s/%s", GET_PROVENANCE_USER_URL, UserProvenances.CFT_IDAM, ID))
+                .get(String.format(REPLACE_STRING, GET_PROVENANCE_USER_URL, UserProvenances.CFT_IDAM, ID))
                 .contentType(MediaType.APPLICATION_JSON);
 
             assertRequestResponseStatus(mockMvc, request, FORBIDDEN.value());
@@ -456,7 +473,8 @@ class AccountTest extends IntegrationTestBase {
         void testDeleteAccount() throws Exception {
             validUser.setUserProvenance(UserProvenances.CFT_IDAM);
             MockHttpServletRequestBuilder deleteRequest = MockMvcRequestBuilders
-                .delete(ROOT_URL + DELETE_PATH + createTestUserValidAccount(validUser));
+                .delete(ROOT_URL + DELETE_PATH + createTestUserValidAccount(validUser))
+                .header(REQUESTER_ID_HEADER, SYSTEM_ADMIN_ISSUER_ID);
 
             MvcResult mvcResult = mockMvc.perform(deleteRequest).andExpect(status().isOk()).andReturn();
             assertEquals(DELETE_USER_SUCCESS, mvcResult.getResponse().getContentAsString(),
@@ -467,14 +485,18 @@ class AccountTest extends IntegrationTestBase {
         @Test
         void testDeleteAccountNotFound() throws Exception {
             assertRequestResponseStatus(mockMvc, MockMvcRequestBuilders
-                .delete(ROOT_URL + DELETE_PATH + UUID.randomUUID()), NOT_FOUND.value());
+                .delete(ROOT_URL + DELETE_PATH + UUID.randomUUID())
+                .header(REQUESTER_ID_HEADER, SYSTEM_ADMIN_ISSUER_ID), NOT_FOUND.value());
+
         }
 
         @Test
         @WithMockUser(username = UNAUTHORIZED_USERNAME, authorities = {UNAUTHORIZED_ROLE})
         void testUnauthorizedDeleteAccount() throws Exception {
+            when(accountAuthorisationService.userCanDeleteAccount(any(), any())).thenReturn(false);
             assertRequestResponseStatus(mockMvc, MockMvcRequestBuilders
-                .delete(ROOT_URL + "/delete/" + UUID.randomUUID()), FORBIDDEN.value());
+                .delete(ROOT_URL + "/delete/" + USER_ID)
+                .header(REQUESTER_ID_HEADER, USER_ID), FORBIDDEN.value());
         }
     }
 
@@ -489,7 +511,7 @@ class AccountTest extends IntegrationTestBase {
 
             MockHttpServletRequestBuilder deleteRequest = MockMvcRequestBuilders
                 .delete(ROOT_URL + DELETE_PATH_V2 + createTestUserValidAccount(validUser))
-                .header(ADMIN_HEADER, SYSTEM_ADMIN_ISSUER_ID);
+                .header(REQUESTER_ID_HEADER, SYSTEM_ADMIN_ISSUER_ID);
 
             MvcResult mvcResult = mockMvc.perform(deleteRequest).andExpect(status().isOk()).andReturn();
             assertEquals(DELETE_USER_SUCCESS, mvcResult.getResponse().getContentAsString(),
@@ -504,7 +526,7 @@ class AccountTest extends IntegrationTestBase {
 
             MockHttpServletRequestBuilder deleteRequest = MockMvcRequestBuilders
                 .delete(ROOT_URL + DELETE_PATH_V2 + createTestUserValidAccount(thirdPartyUser))
-                .header(ADMIN_HEADER, SYSTEM_ADMIN_ISSUER_ID);
+                .header(REQUESTER_ID_HEADER, SYSTEM_ADMIN_ISSUER_ID);
 
             MvcResult mvcResult = mockMvc.perform(deleteRequest).andExpect(status().isOk()).andReturn();
             assertEquals(DELETE_USER_SUCCESS, mvcResult.getResponse().getContentAsString(),
@@ -517,11 +539,11 @@ class AccountTest extends IntegrationTestBase {
         void testV2SystemAdminDeletesSuperAdminUser() throws Exception {
             superAdminUser.setUserProvenance(UserProvenances.CFT_IDAM);
             String superAdminUserId = getSuperAdminUserId(superAdminUser);
-            String systemAdminUserId = getSystemAdminUserId("test_account_system-admin2@hmcts.net");
+            String systemAdminUserId = getSystemAdminUserId();
 
             MockHttpServletRequestBuilder deleteRequest = MockMvcRequestBuilders
                 .delete(ROOT_URL + DELETE_PATH_V2 + superAdminUserId)
-                .header(ADMIN_HEADER, systemAdminUserId);
+                .header(REQUESTER_ID_HEADER, systemAdminUserId);
 
             MvcResult mvcResult = mockMvc.perform(deleteRequest).andExpect(status().isOk()).andReturn();
             assertEquals(DELETE_USER_SUCCESS, mvcResult.getResponse().getContentAsString(),
@@ -530,44 +552,25 @@ class AccountTest extends IntegrationTestBase {
         }
 
         @Test
-        void testV2SuperAdminDeletesVerifiedUser() throws Exception {
+        void testV2SuperAdminCannotDeletesUser() throws Exception {
             validUser.setUserProvenance(UserProvenances.CFT_IDAM);
             validUser.setRoles(Roles.VERIFIED);
 
             String superAdminUserId = getSuperAdminUserId(superAdminUser);
 
+            when(accountAuthorisationService.userCanDeleteAccount(any(), any())).thenReturn(false);
             MockHttpServletRequestBuilder deleteRequest = MockMvcRequestBuilders
                 .delete(ROOT_URL + DELETE_PATH_V2 + createTestUserValidAccount(validUser))
-                .header(ADMIN_HEADER, superAdminUserId);
+                .header(REQUESTER_ID_HEADER, superAdminUserId);
 
-            mockMvc.perform(deleteRequest).andExpect(status().isForbidden()).andReturn();
-        }
-
-        @Test
-        void testV2SuperAdminDeletesSuperAdminUser() throws Exception {
-            String superAdminUserId = getSuperAdminUserId(superAdminUser);
-
-            superAdminUser.setUserProvenance(UserProvenances.CFT_IDAM);
-            superAdminUser.setEmail("superAdminToDelete@justice.gov.uk");
-            String superAdminUserIdToDelete = getSuperAdminUserId(superAdminUser);
-
-            MockHttpServletRequestBuilder deleteRequest = MockMvcRequestBuilders
-                .delete(ROOT_URL + DELETE_PATH_V2 + superAdminUserIdToDelete)
-                .header(ADMIN_HEADER, superAdminUserId);
-
-            MvcResult mvcResult = mockMvc.perform(deleteRequest).andExpect(status().isOk()).andReturn();
-            assertEquals(DELETE_USER_SUCCESS, mvcResult.getResponse().getContentAsString(),
-                         DELETE_USER_FAILURE
-            );
+            mockMvc.perform(deleteRequest).andExpect(status().isForbidden());
         }
 
         @Test
         void testV2DeleteAccountNotFound() throws Exception {
-            String superAdminUserId = getSuperAdminUserId(superAdminUser);
-
             MockHttpServletRequestBuilder request = MockMvcRequestBuilders
-                .delete(ROOT_URL + DELETE_PATH_V2 + UUID.randomUUID())
-                .header(ADMIN_HEADER, superAdminUserId);
+                .delete(ROOT_URL + DELETE_PATH_V2 + USER_ID)
+                .header(REQUESTER_ID_HEADER, SYSTEM_ADMIN_ISSUER_ID);
 
             assertRequestResponseStatus(mockMvc, request, NOT_FOUND.value());
         }
@@ -576,8 +579,10 @@ class AccountTest extends IntegrationTestBase {
         @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
             scripts = {ADD_USERS_SCRIPT, ADD_VERIFIED_USERS_SCRIPT})
         void testUnauthorizedDeleteAccountV2WhenNoUserId() throws Exception {
+            when(accountAuthorisationService.userCanDeleteAccount(any(), any())).thenReturn(false);
             MockHttpServletRequestBuilder request = MockMvcRequestBuilders
-                .delete(ROOT_URL + DELETE_PATH_V2 + VERIFIED_USER_ID);
+                .delete(ROOT_URL + DELETE_PATH_V2 + USER_ID)
+                .header(REQUESTER_ID_HEADER, SYSTEM_ADMIN_ISSUER_ID);
 
             assertRequestResponseStatus(mockMvc, request, FORBIDDEN.value());
         }
@@ -587,9 +592,10 @@ class AccountTest extends IntegrationTestBase {
             scripts = {ADD_USERS_SCRIPT, ADD_VERIFIED_USERS_SCRIPT})
         @WithMockUser(username = UNAUTHORIZED_USERNAME, authorities = {UNAUTHORIZED_ROLE})
         void testUnauthorizedDeleteAccountV2() throws Exception {
+            when(accountAuthorisationService.userCanDeleteAccount(any(), any())).thenReturn(false);
             MockHttpServletRequestBuilder request = MockMvcRequestBuilders
-                .delete(ROOT_URL + DELETE_PATH_V2 + VERIFIED_USER_ID)
-                .header(ADMIN_HEADER, SYSTEM_ADMIN_ISSUER_ID);
+                .delete(ROOT_URL + DELETE_PATH_V2 + USER_ID)
+                .header(REQUESTER_ID_HEADER, SYSTEM_ADMIN_ISSUER_ID);
 
             assertRequestResponseStatus(mockMvc, request, FORBIDDEN.value());
         }
@@ -598,15 +604,13 @@ class AccountTest extends IntegrationTestBase {
     @Nested
     class UpdateAccountRoleTests {
         @Test
-        void testUpdateAccountRoleByIdWithAdminProvided() throws Exception {
+        void testUpdateAccountRoleByIdWithSystemAdminProvided() throws Exception {
             validUser.setUserProvenance(UserProvenances.CFT_IDAM);
-
             String createdUserId = createTestUserValidAccount(validUser);
-            String superAdminUserId = getSuperAdminUserId(superAdminUser);
 
             MockHttpServletRequestBuilder updateRequest = MockMvcRequestBuilders
                 .put(ROOT_URL + UPDATE_PATH + createdUserId + "/" + Roles.INTERNAL_ADMIN_LOCAL)
-                .header(ADMIN_HEADER, superAdminUserId);
+                .header(REQUESTER_ID_HEADER, SYSTEM_ADMIN_ID);
 
             MvcResult responseUpdatedUser = mockMvc.perform(updateRequest)
                 .andExpect(status().isOk()).andReturn();
@@ -621,6 +625,7 @@ class AccountTest extends IntegrationTestBase {
         void testUpdateAccountRoleByIdWithoutAdminIdReturnsForbidden() throws Exception {
             validUser.setUserProvenance(UserProvenances.CFT_IDAM);
 
+            when(accountAuthorisationService.userCanUpdateAccount(any(), any())).thenReturn(false);
             MockHttpServletRequestBuilder updateRequest = MockMvcRequestBuilders
                 .put(ROOT_URL + UPDATE_PATH + createTestUserValidAccount(validUser) + "/" + Roles.INTERNAL_ADMIN_LOCAL);
 
@@ -634,9 +639,10 @@ class AccountTest extends IntegrationTestBase {
             PiUser superAdminUser = createUser(true, Roles.INTERNAL_ADMIN_LOCAL);
             String superAdminUserId = getSuperAdminUserId(superAdminUser);
 
+            when(accountAuthorisationService.userCanUpdateAccount(any(), any())).thenReturn(false);
             MockHttpServletRequestBuilder updateRequest = MockMvcRequestBuilders
                 .put(ROOT_URL + UPDATE_PATH + createTestUserValidAccount(validUser) + "/" + Roles.INTERNAL_ADMIN_LOCAL)
-                .header(ADMIN_HEADER, superAdminUserId);
+                .header(REQUESTER_ID_HEADER, superAdminUserId);
 
             mockMvc.perform(updateRequest)
                 .andExpect(status().isForbidden());
@@ -647,9 +653,10 @@ class AccountTest extends IntegrationTestBase {
             validUser.setUserProvenance(UserProvenances.CFT_IDAM);
             String createdUserId = createTestUserValidAccount(validUser);
 
+            when(accountAuthorisationService.userCanUpdateAccount(any(), any())).thenReturn(false);
             MockHttpServletRequestBuilder updateRequest = MockMvcRequestBuilders
                 .put(ROOT_URL + UPDATE_PATH + createdUserId + "/" + Roles.INTERNAL_ADMIN_LOCAL)
-                .header(ADMIN_HEADER, createdUserId);
+                .header(REQUESTER_ID_HEADER, createdUserId);
 
             mockMvc.perform(updateRequest)
                 .andExpect(status().isForbidden());
@@ -661,7 +668,7 @@ class AccountTest extends IntegrationTestBase {
 
             MockHttpServletRequestBuilder request = MockMvcRequestBuilders
                 .put(ROOT_URL + UPDATE_PATH + UUID.randomUUID() + "/" + Roles.INTERNAL_ADMIN_LOCAL)
-                .header(ADMIN_HEADER, superAdminUserId);
+                .header(REQUESTER_ID_HEADER, superAdminUserId);
 
             assertRequestResponseStatus(mockMvc, request, NOT_FOUND.value());
         }
@@ -671,10 +678,12 @@ class AccountTest extends IntegrationTestBase {
         @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
             scripts = {ADD_USERS_SCRIPT, ADD_VERIFIED_USERS_SCRIPT})
         void testUnauthorizedUpdateAccountRole() throws Exception {
+            when(accountAuthorisationService.userCanUpdateAccount(any(), any())).thenReturn(false);
             MockHttpServletRequestBuilder request = MockMvcRequestBuilders
                 .put(ROOT_URL + UPDATE_PATH + VERIFIED_USER_ID + "/" + Roles.INTERNAL_ADMIN_LOCAL)
-                .header(ADMIN_HEADER, SUPER_ADMIN_ISSUER_ID);
+                .header(REQUESTER_ID_HEADER, SUPER_ADMIN_ISSUER_ID);
 
+            when(accountAuthorisationService.userCanViewAccounts(any())).thenReturn(false);
             assertRequestResponseStatus(mockMvc, request, FORBIDDEN.value());
         }
     }
@@ -684,7 +693,7 @@ class AccountTest extends IntegrationTestBase {
             MockMvcRequestBuilders
                 .post(PI_URL)
                 .content(OBJECT_MAPPER.writeValueAsString(List.of(superAdminUser)))
-                .header(ISSUER_HEADER, SYSTEM_ADMIN_ISSUER_ID)
+                .header(REQUESTER_ID_HEADER, SYSTEM_ADMIN_ISSUER_ID)
                 .contentType(MediaType.APPLICATION_JSON);
 
         MvcResult responseCreateUser = mockMvc.perform(createRequest)
@@ -697,20 +706,21 @@ class AccountTest extends IntegrationTestBase {
                 }
             );
 
-        return mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).get(0).toString();
+        return mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).getFirst().toString();
     }
 
-    private String getSystemAdminUserId(String email) throws Exception {
+    private String getSystemAdminUserId() throws Exception {
         SystemAdminAccount systemAdmin = new SystemAdminAccount();
         systemAdmin.setFirstName(FIRST_NAME);
         systemAdmin.setSurname(SURNAME);
-        systemAdmin.setEmail(email);
+        systemAdmin.setEmail("test_account_system-admin2@hmcts.net");
 
+        when(accountAuthorisationService.userCanCreateSystemAdmin(any())).thenReturn(true);
         MockHttpServletRequestBuilder createRequest =
             MockMvcRequestBuilders
                 .post(CREATE_SYSTEM_ADMIN_URL)
                 .content(OBJECT_MAPPER.writeValueAsString(systemAdmin))
-                .header(ISSUER_HEADER, SYSTEM_ADMIN_ISSUER_ID)
+                .header(REQUESTER_ID_HEADER, SYSTEM_ADMIN_ID)
                 .contentType(MediaType.APPLICATION_JSON);
 
         MvcResult responseCreateSystemAdminUser = mockMvc.perform(createRequest)
@@ -728,7 +738,7 @@ class AccountTest extends IntegrationTestBase {
         MockHttpServletRequestBuilder mockHttpServletRequestBuilder = MockMvcRequestBuilders
             .post(PI_URL)
             .content(OBJECT_MAPPER.writeValueAsString(List.of(piUser)))
-            .header(ISSUER_HEADER, SYSTEM_ADMIN_ISSUER_ID)
+            .header(REQUESTER_ID_HEADER, SYSTEM_ADMIN_ISSUER_ID)
             .contentType(MediaType.APPLICATION_JSON);
 
         MvcResult response = mockMvc.perform(mockHttpServletRequestBuilder).andExpect(status().isCreated()).andReturn();
@@ -748,7 +758,7 @@ class AccountTest extends IntegrationTestBase {
         MockHttpServletRequestBuilder mockHttpServletRequestBuilder = MockMvcRequestBuilders
             .post(PI_URL)
             .content(OBJECT_MAPPER.writeValueAsString(List.of(piUser)))
-            .header(ISSUER_HEADER, SYSTEM_ADMIN_ISSUER_ID)
+            .header(REQUESTER_ID_HEADER, SYSTEM_ADMIN_ISSUER_ID)
             .contentType(MediaType.APPLICATION_JSON);
 
         MvcResult mvcResult =
@@ -758,7 +768,7 @@ class AccountTest extends IntegrationTestBase {
     }
 
     private String createTestUserValidAccount(PiUser piUser) throws Exception {
-        return createTestUser(piUser).get(CreationEnum.CREATED_ACCOUNTS).get(0).toString();
+        return createTestUser(piUser).get(CreationEnum.CREATED_ACCOUNTS).getFirst().toString();
     }
 
 }
